--- a/src/app/app.functions/package.json
+++ b/src/app/app.functions/package.json
@@ -1,15 +1,11 @@
 {
-  "name": "demo.functions",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@hubspot/api-client": "^7.0.1",
-    "axios": "^0.27.2"
+    "name": "hs_extensibility_poc",
+    "type": "module",
+    "version": "0.0.1",
+    "description": "Serverless functions for rendering CRM Card and handling user actions",
+    "license": "MIT",
+    "dependencies": {
+      "@hubspot/api-client": "^7.0.1",
+      "axios": "^0.27.2"
+    }
   }
-}
