--- a/src/app/app.json
+++ b/src/app/app.json
@@ -1,18 +1,27 @@
 {
-  "name": "Example App",
-  "description": "An example private app that contains a single CRM card extension.",
-  "scopes": [
-    "crm.objects.contacts.read",
-    "crm.objects.contacts.write"
-  ],
-  "public": false,
-  "extensions": {
-    "crm": {
-      "cards": [
-        {
-          "file": "./crm-card.json"
-        }
-      ]
+    "name": "HubSpot UI Extensibility POC",
+    "description": "HubSpot UI Extensibility POC",
+    "scopes": [
+      "crm.objects.contacts.read",
+      "crm.objects.contacts.write",
+      "crm.objects.deals.write",
+      "crm.objects.deals.read",
+      "crm.objects.custom.read",
+      "crm.schemas.custom.read",
+      "crm.objects.custom.write",
+      "crm.schemas.custom.write"
+    ],
+    "public": false,
+    "extensions": {
+      "crm": {
+        "cards": [
+          {
+            "file": "./crm-card.json"
+          },
+          {
+            "file": "./card-right-pane.json"
+          }
+        ]
+      }
     }
   }
-}
