Updated app name

--- a/src/app/app.json
+++ b/src/app/app.json
@@ -1,6 +1,6 @@
 {
-    "name": "HubSpot UI Extensibility POC",
-    "description": "HubSpot UI Extensibility POC",
+    "name": "Example App",
+    "description": "An example private app that contains a single CRM card extension.",
     "scopes": [
       "crm.objects.contacts.read",
       "crm.objects.contacts.write",
